--- a/index.html
+++ b/index.html
@@ -4,10 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Prince_budha-PORTFOLIO</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/skins/color-1.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-    <p> Namaste sabaijana lai mero naam prince budha</p>
-    
+    <script src="js/index.js">
+
+
+
+    </script>
+    <div class="main-container">
+        <div class="aside">
+            <div class="logo">
+                <a href="#">
+                    <span>A</span>TLAS
+                </a>
+            </div>
+            <div class="nav-toggle">
+                <span></span>
+            </div>
+            <ul class="nav">
+                <li><a href="#" class="active"><i class="fa fa-home"></i>Home</a></li>
+                <li><a href="#"><i class="fa fa-user"></i>About</a></li>
+                <li><a href="#"><i class="fa fa-list"></i>Services</a></li>
+                <li><a href="#"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+                <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
+            </ul>
+        </div> 
+        <div class="main-content">
+            <section class="home section">
+                Home
+                <div class="container">
+                    <div class="row">
+                        <div class="home-info">
+                            <h3 class="hello">Hello, my name is <span class="name">Prince Budha</span></h3>
+                            <h3 class="my-profession">I'm a <span class="typing">Web designer</span></h3>
+                            <p>I'm a web designer with extensive experience for over 10 years. My expertise is to create and website design, graphic design, and many more...</p>
+                            <a href="#contact" class="btn hire-me">Hire me</a>
+                        </div>
+                        <div class="home-img">
+                          <img src="image/profile.jpg" alt="">  
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>  
+    </div>
+        <div class="main">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem eius incidunt esse?
+            Amet vitae dicta pariatur provident iste minima voluptatem beatae, necessitatibus ipsum vel,
+            labore tempora repellendus voluptatibus ex commodi fugit eos? Illum, reprehenderit!
+        </div>
+    </div>
 </body>
 </html>
