--- a/index.html
+++ b/index.html
@@ -38,14 +38,36 @@
                 Home
                 <div class="container">
                     <div class="row">
-                        <div class="home-info">
+                        <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Prince Budha</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Web designer</span></h3>
                             <p>I'm a web designer with extensive experience for over 10 years. My expertise is to create and website design, graphic design, and many more...</p>
                             <a href="#contact" class="btn hire-me">Hire me</a>
                         </div>
-                        <div class="home-img">
+                        <div class="home-img padd-15">
                           <img src="image/profile.jpg" alt="">  
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="about section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2> About Me</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="about-content padd-15">
+                            <div class="row">
+                                <div class="about-text padd-15">
+                                    <h3>I,m Prince Budha and <span>Web Developer</span></h3>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi recusandae blanditiis veritatis quisquam vel, laboriosam nobis numquam velit. Quas, saepe nam similique magni cum sit alias doloribus expedita laboriosam? Voluptate?m</p>
+                                </div>
+                            </div>
+                            <div class="row">	`
+                              
+                            </div>
                         </div>
                     </div>
                 </div>
