--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="css/skins/color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
+
 <body>
     <script src="js/index.js">
 
@@ -32,20 +34,20 @@
                 <li><a href="#"><i class="fa fa-briefcase"></i>Portfolio</a></li>
                 <li><a href="#"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
-        </div> 
+        </div>
         <div class="main-content">
             <section class="home section">
-                Home
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Prince Budha</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Web designer</span></h3>
-                            <p>I'm a web designer with extensive experience for over 10 years. My expertise is to create and website design, graphic design, and many more...</p>
+                            <p>I'm a web designer with extensive experience for over 10 years. My expertise is to create
+                                and website design, graphic design, and many more...</p>
                             <a href="#contact" class="btn hire-me">Hire me</a>
                         </div>
                         <div class="home-img padd-15">
-                          <img src="image/profile.jpg" alt="">  
+                            <img src="image/profile.jpg" alt="">
                         </div>
                     </div>
                 </div>
@@ -62,23 +64,128 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I,m Prince Budha and <span>Web Developer</span></h3>
-                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi recusandae blanditiis veritatis quisquam vel, laboriosam nobis numquam velit. Quas, saepe nam similique magni cum sit alias doloribus expedita laboriosam? Voluptate?m</p>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi recusandae
+                                        blanditiis veritatis quisquam vel, laboriosam nobis numquam velit. Quas, saepe
+                                        nam similique magni cum sit alias doloribus expedita laboriosam? Voluptate?m</p>
                                 </div>
                             </div>
-                            <div class="row">	`
-                              
+                            <div class="row">
+                                <div class="personal-info padd-15">
+                                    <div class="row">
+                                        <div class="info-item padd-15">
+                                            <p>Birthday: <span>18 feb 2000</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                        <p>Age : <span>23</span></p>
+                                        </div>
+                                    <div class="info-item padd-15">
+                                        <p>Website : <span>www.domain.com</span></p>
+                                    </div>
+                                    <div class="info-item padd-15">
+                                        <p>Email : <span>info@gmail.com</span></p>
+                                    </div>
+                                    <div class="info-item padd-15">
+                                        <p>Degree : <span>CSIT</span></p>
+                                    </div>
+                                    <div class="info-item padd-15">
+                                        <p>Phone: <span>9800000000</span></p>
+                                    </div>
+                                    <div class="info-item padd-15">
+                                        <P>City : <span>Kathmandu</span></P>
+                                    </div>
+                                    <div class="info-item padd-15">
+                                        <p>Freelance : <span>Available</span></p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="button">
+                                        <a href="#"class="btn">Download CV</a>
+                                        <a href="#contact"class="btn hire-me">Hire Me</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="education padd-15">
+                                    <h3 class="title">Education</h3>
+                                    <div class="row">
+                                        <div class="timline-box padd-15">
+                                            <div class="timline shadow-dark">
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timline-date">
+                                                        <i class="fa fa-calendar padd-15"></i>2013-2022
+                                                    </h3>
+                                                    <h4 class="timline-title padd-15">Master in Computer Science</h4>
+                                                    <p class="timline-text padd-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                        Totam beatae eius consequatur reiciendis aut eligendi eum esse sequi mollitia praesentium,
+                                                        excepturi quibusdam voluptate non nesciunt. Illo natus consectetur quod nam quidem veniam
+                                                        optio aperiam explicabo? Fuga voluptatum, hic perferendis saepe dolores exercitationem unde
+                                                        ex fugit ipsa ab eius soluta distinctio at tenetur quia eligendi molestiae.</p>
+                                                </div>
+
+
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timline-date">
+                                                        <i class="fa fa-calendar padd-15"></i>2013-2022
+                                                    </h3>
+                                                    <h4 class="timline-title padd-15">Master in Computer Science</h4>
+                                                    <p class="timline-text padd-15">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                        Totam beatae eius consequatur reiciendis aut eligendi eum esse sequi mollitia praesentium,
+                                                        excepturi quibusdam voluptate non nesciunt. Illo natus consectetur quod nam quidem veniam
+                                                        optio aperiam explicabo? Fuga voluptatum, hic perferendis saepe dolores exercitationem unde
+                                                        ex fugit ipsa ab eius soluta distinctio at tenetur quia eligendi molestiae.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="experience padd-15">
+                                    <h3 class="tittle"> experience</h3></div>
+                            </div>
+                            <div class="skill padd-15">
+                                <div class="row">
+                                    <div class="skill-item padd-15">
+                                        <h5>JSS</h5>
+                                        <div class="progress">
+                                            <div class="progress-in" style="width: 86%;"></div>
+                                            <div class="skill-percent">86%</div>
+                                        </div>
+                                    </div>
+                                    <div class="skill-item padd-15">
+                                        <h5>PHP</h5>
+                                        <div class="progress">
+                                            <div class="progress-in" style="width: 76%;"></div>
+                                            <div class="skill-percent">76%</div>
+                                        </div>
+                                    </div>
+                                    <div class="skill-item padd-15">
+                                        <h5>CSS</h5>
+                                        <div class="progress">
+                                            <div class="progress-in" style="width: 96%;"></div>
+                                            <div class="skill-percent">96%</div>
+                                        </div>
+                                    </div>
+                                    <div class="skill-item padd-15">
+                                        <h5>HTML</h5>
+                                        <div class="progress">
+                                            <div class="progress-in" style="width: 98%;"></div>
+                                            <div class="skill-percent">98%</div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
             </section>
-        </div>  
-    </div>
-        <div class="main">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem eius incidunt esse?
-            Amet vitae dicta pariatur provident iste minima voluptatem beatae, necessitatibus ipsum vel,
-            labore tempora repellendus voluptatibus ex commodi fugit eos? Illum, reprehenderit!
         </div>
     </div>
+    <div class="main">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem eius incidunt esse?
+        Amet vitae dicta pariatur provident iste minima voluptatem beatae, necessitatibus ipsum vel,
+        labore tempora repellendus voluptatibus ex commodi fugit eos? Illum, reprehenderit!
+    </div>
+    </div>
 </body>
+
 </html>
